--- a/src/css/Stock.css
+++ b/src/css/Stock.css
@@ -1,8 +1,9 @@
 .stock {
   display: flex;
   align-items: center;
-  border: 2px solid green;
+  border-bottom: 2px solid lightgray;
   width: 80%;
+  height: 90px; 
 }
 
 .stock-img {
