--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -9,6 +9,10 @@ header {
   border: 2px solid green;
 }
 
+.header-logo-title {
+  display: flex;
+}
+
 .logo {
   height: 100px;
   margin-right: 2em;
