--- a/src/css/SelectedStock.css
+++ b/src/css/SelectedStock.css
@@ -1,11 +1,12 @@
-/* .selected-stock-wrapper {
-  display: flex;
-  flex-direction: row;
-} */
-
 .selected-stock {
   display: flex;
   border: 2px solid green;
   justify-content: space-around;
   align-items: center;
+}
+
+.selected-stock-details {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
