--- a/src/css/SearchForm.css
+++ b/src/css/SearchForm.css
@@ -3,13 +3,12 @@
   min-width:375px;
   height: 30px;
   border-radius: 5px;
-  border: 1px solid rgb(223, 209, 6);
+  border: 1px solid orange;
   transition: .2s;
   background-color: #ffffff;
-  color: white;
   padding-left: 10px;
 }
 
 .search-bar:hover {
-  box-shadow: 0 0 20px rgb(223, 209, 6);
+  box-shadow: 0 0 20px orange;
 }
