--- a/src/css/Stock.css
+++ b/src/css/Stock.css
@@ -1,8 +1,8 @@
 .stock {
   display: flex;
   align-items: center;
-  border-bottom: 2px solid lightgray;
-  width: 80%;
+  border-bottom: 2px solid darkgray;
+  width: 100%;
   height: 90px; 
 }
 
