--- a/src/css/StockContainer.css
+++ b/src/css/StockContainer.css
@@ -1,3 +1,11 @@
+a {
+  color: black;
+}
+
+a:hover {
+  background-color: #ececec;
+}
+
 .stock-container {
   display: flex;
   flex-direction: column;
@@ -8,7 +16,7 @@
 .stock-container-label {
   display: flex;
   border-bottom: 2px solid lightgray;
-  width: 80%;
+  width: 900px;
   height: 50px; 
   justify-content: space-evenly;
 }
@@ -24,10 +32,11 @@
 
 .stock-label-details {
   display: flex;
+  align-items: center;
   justify-content: space-evenly;
   width: 100%;
 }
 
 .stock-link {
-  text-decoration-style: none;
+  text-decoration: none;
 }
