--- a/src/css/StockContainer.css
+++ b/src/css/StockContainer.css
@@ -16,7 +16,7 @@ a:hover {
 .stock-container-label {
   display: flex;
   border-bottom: 2px solid lightgray;
-  width: 900px;
+  width: 800px;
   height: 50px; 
   justify-content: space-evenly;
 }
@@ -26,17 +26,21 @@ a:hover {
   justify-content: center;
   width: 50px;
   margin-left: 50px;
-  margin-right: 50px;
+  margin-right: 40px;
   visibility: hidden;
 }
 
 .stock-label-details {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
+  width: 80%;
 }
 
 .stock-link {
   text-decoration: none;
+}
+
+.stock-label {
+  padding-left: 30px;
+  padding-right: 30px;
 }
