--- a/src/css/SelectedStock.css
+++ b/src/css/SelectedStock.css
@@ -3,6 +3,7 @@
   justify-content: space-around;
   align-items: center;
   margin-top: 5%;
+  margin-bottom: 10%;
 }
 
 .selected-stock-details {
@@ -31,4 +32,18 @@
 
 a:hover {
   background-color: white;
+}
+
+@media screen and (max-width: 900px) {
+  .selected-stock {
+    display: flex;
+    flex-direction: column;
+    width: 700px;
+  }
+
+  .selected-stock-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
