--- a/src/css/StockContainer.css
+++ b/src/css/StockContainer.css
@@ -2,10 +2,6 @@ a {
   color: black;
 }
 
-a:hover {
-  background-color: #ececec;
-}
-
 .stock-container {
   display: flex;
   flex-direction: column;
@@ -47,7 +43,12 @@ a:hover {
 
 @media screen and (max-width: 900px) {
   .stock-container {
-    display: flex;
-    /* flex-direction: row; */
+    height: fit-content;
+    width: 100%;
+    justify-content: space-around;
+  }
+
+  .stock-container-label {
+    visibility: hidden;
   }
 }
