--- a/src/css/Stock.css
+++ b/src/css/Stock.css
@@ -52,8 +52,14 @@
   .stock {
     justify-content: center;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
     width: 400px;
+  }
+
+  .stock-title {
+    width: 100px; 
+    font-size: 1.2em;
+    text-align: left;
   }
 }
