--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,4 +1,5 @@
-header {
+.header,
+.header-dark {
   background-color: #e5e5e5;
   color: white;
   min-height: 18vh;
@@ -7,16 +8,25 @@ header {
   width: 100%;
 }
 
+.header-dark {
+  background-color: #121212;
+}
+
 .search-container {
   position: absolute;
   width: 100%;
 }
 
-h1 {
+.header-title,
+.header-title-dark {
   font-size: 3em;
   font-family: 'Arvo', serif;
   text-decoration: underline;
   color: #14213d;
+}
+
+.header-title-dark {
+  color: white;
 }
 
 .header-link {
@@ -29,6 +39,104 @@ h1 {
   height: 150px;
   width: 160px;
   float: left;
+}
+
+.toggle {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 95%;
+}
+
+.toggle-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 50px;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #19a2c1;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #FFD580;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+.switch-checkbox {
+  padding: 10px;
+}
+
+@media screen and (max-width: 1000px) {
+  .home {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .headshot-img {
+    margin-top: 2%;
+    width: 200px;
+  }
+
+  .intro {
+    width: 70%;
+  }
+
+  .toggle {
+    align-items: center;
+    width: 100;
+  }
 }
 
 @media screen and (max-width: 900px) {
