--- a/src/css/Stock.css
+++ b/src/css/Stock.css
@@ -1,3 +1,7 @@
+a {
+  text-decoration: none;
+}
+
 .stock {
   display: flex;
   align-items: center;
@@ -29,6 +33,10 @@
 
 .stock-details-dark {
   color: white;
+}
+
+.stock-details-dark:hover {
+  color: black;
 }
 
 .percent-change-green {
